# tau

./: Bot.hs  Hint.hs  LICENSE  Main.hs  README.md  stack.yaml  tau.cabal
exec/: Main.hs
src/HipChat/: Bot.hs
src/HipChat/Bot/: Hint.hs
src/Network/Xmpp/: Bot.hs
src/Network/Xmpp/Bot/: Hint.hs
