name:          tau
version:       1.0.0
synopsis:      A HipChat bot programmable using Haskell
description:   Program a HipChat bot using Haskell code
license:       BSD3
license-file:  LICENSE
author:        Maxwell Swadling
maintainer:    maxwellswadling@gmail.com
category:      Network
build-type:    Simple
cabal-version: >= 1.10

executable tau
  main-is:          Main.hs
  other-modules:    Bot, Hint
  build-depends:    base                  >= 4.7     && < 4.9
                  , async                 >= 2.0.0.0 && < 2.1
                  , data-default          >= 0.5.3   && < 0.6
                  , exceptions            >= 0.8.0.2 && < 0.9
                  , extensible-exceptions >= 0.1.1.4 && < 0.2
                  , hashable                            < 1.3
                  , hint                  >= 0.4.2.3 && < 0.5
                  , hslogger              >= 1.2.9   && < 1.3
                  , managed                             < 1.1
                  , mtl                   >= 2.0.0.0 && < 2.3            
                  , pontarius-xmpp        >= 0.4.5   && < 0.5
                  , stm                                 < 2.5
                  , text                                < 1.3
                  , turtle                >= 1.2.2   && < 1.3
                  , unordered-containers                < 0.3
                  , xml-types             >= 0.3.6   && < 0.4
  ghc-options:      -threaded -O2 -Wall
  default-language: Haskell2010
