name:          tau
version:       1.0.0
synopsis:      An XMPP bot programmable using Haskell
description:   Program an XMPP bot using Haskell code
license:       BSD3
license-file:  LICENSE
author:        Maxwell Swadling
maintainer:    maxwellswadling@gmail.com
category:      Network
build-type:    Simple
cabal-version: >= 1.10

library
    hs-source-dirs:   src
    exposed-modules:  Network.Xmpp.Bot
                    , Network.Xmpp.Bot.Hint
    build-depends:    base                  >= 4.6     && < 4.9
                    , async                 >= 2.0.0.0 && < 2.1
                    , deepseq               >= 1.2.0.1 && < 1.5
                    , exceptions                          < 0.9
                    , hashable                            < 1.3
                    , hint                  >= 0.4.2.3 && < 0.5
                    , lens-family-core      >= 1.1.0   && < 1.3
                    , managed                             < 1.1
                    , mtl                   >= 2.0.0.0 && < 2.3            
                    , network                          && < 2.7
                    , network-protocol-xmpp >= 0.4     && < 0.5
                    , stm                                 < 2.5
                    , text                                < 1.3
                    , turtle                >= 1.2.2   && < 1.3
                    , unordered-containers                < 0.3
                    , xml-types             >= 0.3.6   && < 0.4
    ghc-options:      -threaded -O2 -Wall
    default-language: Haskell2010

executable tau
    main-is:          Main.hs
    build-depends:    base                  >= 4.7     && < 4.9
                    , tau
                    , text                                < 1.3
                    , turtle                >= 1.2.2   && < 1.3
    hs-source-dirs:   exec
    ghc-options:      -threaded -O2 -Wall
    default-language: Haskell2010
